# Robot_prosjekt

./: README.md  external.repos
bringup_pkg/: package.xml  setup.py
bringup_pkg/launch/: full_system.launch.py
camera_pkg/: package.xml  setup.py
camera_pkg/camera_pkg/: transform_node.py
camera_pkg/config/: camera_params.yaml
camera_pkg/launch/: camera.launch.py
detection_pkg/: package.xml  setup.py
detection_pkg/config/: detection_params.yaml
detection_pkg/detection_pkg/: detection_node.py
detection_pkg/launch/: detection.launch.py  vision.launch.py
robot_pkg/: package.xml  setup.py
robot_pkg/config/: robot_params.yaml
robot_pkg/launch/: robot.launch.py
robot_pkg/robot_pkg/: coordinator_node.py  motion_node.py
vision_pkg/: package.xml  setup.py
vision_pkg/config/: hsv_params.yaml
vision_pkg/launch/: vision.launch.py
vision_pkg/vision_pkg/: camera_node.py  detection_node.py
