<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup_pkg</name>
  <version>0.0.0</version>
  <description>Top-level launch package — starts the full cube-pointing system</description>
  <maintainer email="richard.solheim21@gmail.com">richard</maintainer>
  <license>MIT</license>

  <depend>camera_pkg</depend>
  <depend>detection_pkg</depend>
  <depend>robot_pkg</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
